--- a/social_project/tweetApp/templates/tweetApp/index.html
+++ b/social_project/tweetApp/templates/tweetApp/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tweet App</title>
-  </head>
-  <body>
-    <h1>This is my tweet App.</h1>
-  </body>
-</html>
+
+
+{% extends "layout.html" %}
+{% block title %}
+Tweet App
+
+{% endblock title %}
+
+{% block content %}
+
+<h1>This is our Django Project.</h1>
+
+{% endblock content %}
