--- a/social_project/static/css/styels.css
+++ b/social_project/static/css/styels.css
@@ -1,10 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+input {
+    border: 1px solid rgb(150, 150, 150);
 }
 
-body{
-    background-color: #212121;
-    color: #fff;
+.hover-cursor-pointer:hover {
+    cursor: pointer;
+}
+
+.errorlist {
+    list-style-type: none;
 }
