--- a/social_project/templates/layout.html
+++ b/social_project/templates/layout.html
@@ -16,6 +16,17 @@
   <body>
     {% include 'nav.html' %}
 
+    {% if messages %}
+      <div class="container mt-2">
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong class="fs-5">{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
     <div class="container my-2">
       {% block content %}
 
