--- a/social_project/templates/nav.html
+++ b/social_project/templates/nav.html
@@ -12,18 +12,22 @@
           <a class="nav-link fs-5 {% if request.resolver_match.url_name == 'tweet' %}active{% endif %}" href="{% url 'tweet_app:tweet' %}">Tweet</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2 fs-5" type="search" placeholder="Search" aria-label="Search" />
+
+      <form class="d-flex mx-2" role="search" action="{% url 'tweet_app:search' %}">
+        <input class="form-control me-2 fs-5" type="search" placeholder="Search" aria-label="Search" name="user-search" />
         <button class="btn btn-outline-success fs-5" type="submit">Search</button>
       </form>
-      <div class="mx-2">
-        <a href="{% url 'tweet_app:register' %}" class="btn btn-outline-success fw-bold fs-5">Register</a>
-        {% if request.user.is_authenticated %}
-          <a href="{% url 'tweet_app:logout' %}" class="btn btn-outline-success fw-bold fs-5 mx-2">Logout</a>
-        {% else %}
-          <a href="{% url 'tweet_app:login' %}" class="btn btn-outline-success fw-bold fs-5 mx-2">Login</a>
-        {% endif %}
-      </div>
+
+      <a href="{% url 'tweet_app:register' %}" class="btn btn-outline-success fw-bold fs-5">Register</a>
+      {% if request.user.is_authenticated %}
+        <form method="post" action="{% url 'tweet_app:logout' %}">
+          {% csrf_token %}
+          <button class="btn btn-outline-success fw-bold fs-5 mx-2">Logout</button>
+        </form>
+        {% comment %} <a href="{% url 'tweet_app:logout' %}" class="btn btn-outline-success fw-bold fs-5 mx-2">Logout</a> {% endcomment %}
+      {% else %}
+        <a href="{% url 'tweet_app:login' %}" class="btn btn-outline-success fw-bold fs-5 mx-2">Login</a>
+      {% endif %}
 
       <div class="form-check form-switch">
         <input class="form-check-input hover-cursor-pointer" type="checkbox" role="switch" id="theme-switch" />
