--- a/social_project/tweetApp/templates/tweetApp/user_login.html
+++ b/social_project/tweetApp/templates/tweetApp/user_login.html
@@ -3,12 +3,12 @@
   Tweet App | Login User
 {% endblock %}
 {% block content %}
-  <section class="px-3 py-2 my-4 border border-2 rounded-3 d-flex justify-content-center align-items-center flex-column">
+  <section class="px-5 py-2 my-4 border border-2 rounded-3 d-flex justify-content-center align-items-center flex-column col-md-6 offset-md-3">
     <h2 class="display-5 fw-bold pb-2 border-bottom border-2 border-white">Login Form</h2>
     <form class="my-2 w-100 d-flex flex-column align-items-center" method="post">
       {% csrf_token %}
       {% for field in form %}
-        <label for="{{ field.auto_id }}" class="fs-3 w-75 fw-bold">{{ field.label }}</label>
+        <label for="{{ field.auto_id }}" class="fs-3 w-100 fw-bold">{{ field.label }}</label>
         {{ field }}
       {% endfor %}
 
@@ -21,12 +21,12 @@
           <p class="fs-2 text-danger my-2">{{ form.non_field_errors }}</p>
         </div>
       {% endif %}
-      <div class="w-75">
+      <div class="d-grid w-100 mx-auto">
         <button type="submit" class="btn btn-outline-primary btn-lg my-2 fw-bold fs-3">Submit</button>
       </div>
     </form>
     <div class="fs-5 fw-bold">
-      Don't Have an account ? <a class="text-decoration-none" href="{% url 'tweet_app:register' %}">Create account</a>
+      Don't Have an account ? <a class="text-decoration-none hover-text-underline" href="{% url 'tweet_app:register' %}">Create account</a>
     </div>
   </section>
 {% endblock %}
