--- a/social_project/tweetApp/templates/tweetApp/tweet_create.html
+++ b/social_project/tweetApp/templates/tweetApp/tweet_create.html
@@ -12,7 +12,7 @@
   <form method="post" class="mt-2 px-3 py-2" enctype="multipart/form-data">
     {% csrf_token %}
     {% for field in form %}
-      <label for="{{ field.auto_id }}" class="d-inline-block form-label fs-4 fw-bold mb-2">{{ field.label }}</label>
+      <label for="{{ field.auto_id }}" class="d-inline-block form-label fs-4 fw-bold">{{ field.label }}</label>
       {{ field }}
     {% endfor %}
 
